fix: fix styling for disabled buttons for higher contrast
affects: @entur/button

--- a/packages/button/src/Button.scss
+++ b/packages/button/src/Button.scss
@@ -234,10 +234,11 @@ a.eds-button {
   }
 
   &[disabled] {
-    background-color: $colors-greys-grey20;
-    border-color: $colors-greys-grey20;
-    color: $colors-greys-grey40;
+    opacity: 0.5;
     pointer-events: none;
+    &.eds-button--loading {
+      opacity: 1;
+    }
 
     .eds-contrast & {
       background-color: $colors-blues-blue40;
